# nexus

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  rope_test.py  setup.py
.github/workflows/: README.md  build-wheels.yml  c-cpp.yml  ci.yml  cmake-single-platform.yml
api-src/: CMakeLists.txt  log.cpp  nxs_api.cpp
device_lib/: amd-gpu-gfx942.json  apple-gpu-applegpu_g16s.json  apple-gpu-m4.json
docs/: APIs.md  Build_and_CI.md  Core_API.md  JSON_API.md  Logging.md  Plugin_API.md  Python_API.md  Quick_Start.md
include/: nexus-api.h  nexus.h
include/nexus/: api.h  buffer.h  command.h  database.h  device.h  device_db.h  enums.h  event.h  info.h  kernel.h  library.h  log.h  log_manager.h  object.h  properties.h  property.h  runtime.h  schedule.h  stream.h  system.h  utility.h
include/nexus-api/: _nxs_functions.h  _nxs_propertys.h  nxs.h  nxs_function_types.h  nxs_functions.h  nxs_log.h  nxs_platform.h  nxs_plugin.h  nxs_propertys.h  nxs_runtime.h  nxs_version.h
include/nexus-api/src/: nxs_functions.cpp  nxs_propertys.cpp
kernels/: add_vectors.py
plugins/: CMakeLists.txt
plugins/cpu/: CMakeLists.txt  cpu_command.cpp  cpu_command.h  cpu_runtime.c  cpu_runtime.cpp  cpu_runtime.h  cpu_schedule.cpp  cpu_schedule.h  threadpool.h
plugins/cuda/: CMakeLists.txt  cuda_buffer.h  cuda_command.h  cuda_device.h  cuda_kernel.h  cuda_library.h  cuda_plugin_runtime.h  cuda_runtime.c  cuda_runtime.cpp  cuda_schedule.cpp  cuda_schedule.h  cuda_utils.h
plugins/cuda/kernels/: add_vectors.cu
plugins/hip/: CMakeLists.txt  hip.program.txt  hip_kernels.hip  hip_runtime.c  hip_runtime.cpp
plugins/include/: rt_buffer.h  rt_command.h  rt_device.h  rt_kernel.h  rt_library.h  rt_object.h  rt_pool.h  rt_runtime.h  rt_schedule.h  rt_utilities.h  runtime_device.h
plugins/metal/: CMakeLists.txt  README.md  metal_runtime.cpp
plugins/metal/metal-cpp/Metal/: .MTLDevice.hpp.swp
plugins/tenstorrent/: CMakeLists.txt  README.md  tenstorrent.h  tt_buffer.cpp  tt_buffer.h  tt_command.cpp  tt_command.h  tt_device.h  tt_library.cpp  tt_library.h  tt_runtime.cpp  tt_runtime.h  tt_schedule.cpp  tt_schedule.h
python/nexus/: __init__.py  utils.py
python/src/: main.cc  pynexus.h  system.cc
schema/: gpu_architecture_schema.json  kernel_catalog.json  schema_dump.py
scripts/: build.sh  test_build.sh
src/: CMakeLists.txt  _buffer_impl.h  _device_impl.h  _info_impl.h  _kernel_impl.h  _library_impl.h  _properties_impl.h  _runtime_impl.h  _schedule_impl.h  _system_impl.h  buffer.cpp  command.cpp  database.cpp  device.cpp  device_db.cpp  enums.cpp  event.cpp  info.cpp  kernel.cpp  library.cpp  main.cpp  properties.cpp  runtime.cpp  schedule.cpp  stream.cpp  system.cpp  utility.cpp
test/: CMakeLists.txt  main.cpp
test/cpp/: CMakeLists.txt  main.cpp  nexus_test.h  test_basic_kernel.cpp  test_buffers.cpp  test_datatypes.cpp  test_graph.cpp  test_kernel_catalog.cpp  test_linux.cpp  test_multi_stream_sync.cpp  test_rotary_embedding.cpp  test_smi.cpp
test/cpp/cpu/: cpu_kernel.c
test/cpp/gpu/: CMakeLists.txt  main.cpp  nexus_test.h  test.cpp  test_graph.cpp  test_linux.cpp  test_multi_stream_sync.cpp
test/kernels/: CMakeLists.txt
test/kernels/cpu/: cpu_kernel.c  cpu_kernel.cpp
test/kernels/cuda_kernels/: add_all_datatypes.cu  add_vectors.cu  add_vectors2.cu  add_vectors_shared_memory.cu
test/kernels/metal_kernels/: kernel.metal
test/packaging/: test_build.sh  test_packaging.sh
test/pynexus/: README.md  kernel.metal  test-linux-cuda.py  test.py  test_device_info.py  test_load_library_missing.py  test_multi_stream_sync.py  test_rotary_embedding.py
test/python/: README.md  __init__.py  run_tests.py  test_basic.py  test_buffer.py  test_integration.py  test_properties.py  test_runtime.py  test_schedule.py  test_system.py
test/unit/: CMakeLists.txt  hello_world.cpp
tools/: cpu_kc.py  cpubin_kc.py  cubin_kc.py  cuda_kc.py  extract_binary.py  hip_kc.py  metal_kc.py  symbol_finder.py
